--- a/reference/index.adoc
+++ b/reference/index.adoc
@@ -1,7 +1,3 @@
----
-title: Reference and Specifications
----
-
-# Reference and Specifications
+= Reference and Specifications
 
 This chapter contains reference specifications for various LensKit file formats.
