--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -8,14 +8,14 @@
 .. link:basics/data-access.md[Connecting to Data]
 .. link:basics/libraries.md[Libraries]
 
-. link:evaluator/index.md[Evaluating Recommenders]
+. link:evaluator/index.adoc[Evaluating Recommenders]
 .. link:evaluator/quickstart.adoc[Getting Started]
 .. link:evaluator/gradle.adoc[Working with the Gradle Plugin]
 .. link:evaluator/data.adoc[Data Prep and Crossfolding]
 .. link:evaluator/train-test.adoc[Train-Test Evaluations]
 .. link:evaluator/metrics.adoc[Evaluation Metrics]
 
-.  link:reference/index.md[Reference]
+.  link:reference/index.adoc[Reference]
 .. link:reference/data-manifest.adoc[Data Manifests]
 .. link:https://mooc.lenskit.org/apidocs/[API Javadoc]
 .. link:https://mooc.lenskit.org/gradle-docs/[Gradle plugin GroovyDoc]
