asciidoc some intro material

--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -1,7 +1,7 @@
 = Summary
 
-. link:getting-started.md[Getting Started]
-. link:basics/index.md[Fundamental Concepts]
+. link:getting-started.adoc[Getting Started]
+. link:basics/index.adoc[Fundamental Concepts]
 .. link:basics/structure.md[Structure of a Recommender]
 .. link:basics/configuration.md[Configuring a Recommender]
 .. link:basics/data-model.md[The LensKit Data Model]
