Start adding man pages

--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -20,5 +20,6 @@
 
 .  link:reference/index.adoc[Reference]
 .. link:reference/data-manifest.adoc[Data Manifests]
+.. link:reference/cli/lenskit.1.adoc[LensKit CLI]
 .. link:https://mooc.lenskit.org/apidocs/[API Javadoc]
 .. link:https://mooc.lenskit.org/gradle-docs/[Gradle plugin GroovyDoc]
