--- a/reference/cli/lenskit.1.adoc
+++ b/reference/cli/lenskit.1.adoc
@@ -84,26 +84,4 @@ logging configuration (e.g. `--log-file`).
 -  The LensKit home page: http://lenskit.org
 -  The LensKit manual: http://lenskit.org/documentation
 
-== Project Information
-
-This command is a part of LensKit, an open source recommender systems toolkit
-originally developed by http://grouplens.org[GroupLens Research]. +
-Copyright 2010-2016 LensKit contributors (see CONTRIBUTORS.md) +
-Copyright 2010-2014 Regents of the University of Minnesota
-
-Work on LensKit has been funded by the National Science Foundation under
-grants IIS 05-34939, 08-08692, 08-12148, and 10-17697.
-
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU Lesser General Public License as
-published by the Free Software Foundation; either version 2.1 of the
-License, or (at your option) any later version.
-
-This program is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-details.
-
-You should have received a copy of the GNU General Public License along with
-this program; if not, write to the Free Software Foundation, Inc., 51
-Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+{% include "./footer.adoc" %}
