hey it's some web stuff

--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -23,7 +23,8 @@
 
 .  link:reference/index.adoc[Reference]
 .. link:reference/data-manifest.adoc[Data Manifests]
-.. link:reference/cli/lenskit.1.adoc[LensKit CLI]
-... link:reference/cli/lenskit-version.1.adoc[`version`]
 .. link:https://mooc.lenskit.org/apidocs/[API Javadoc]
 .. link:https://mooc.lenskit.org/gradle-docs/[Gradle plugin GroovyDoc]
+.. link:reference/cli/lenskit.1.adoc[LensKit CLI]
+... link:reference/cli/lenskit-script-environment.7.adoc[Script environments]
+... link:reference/cli/lenskit-version.1.adoc[`version`]
